--- a/front-end/views/index.pug
+++ b/front-end/views/index.pug
@@ -94,7 +94,7 @@ block content
             .row
               .col-md-4.col-sm-12
                 h3.h5 Contáctanos
-                form(action='https://formspree.io/youremail@example.com', method='POST')
+                form(action='https://formspree.io/rlaingpro@gmail.com', method='POST')
                   .row.no-gutters
                     .col-lg-6.col-md-12.col-sm-12.tf-contact-col
                       input.bg-light.form-control(type='text', name='name', placeholder='*Tu nombre', required='required')
