--- a/front-end/views/index.pug
+++ b/front-end/views/index.pug
@@ -99,7 +99,7 @@ block content
                     .col-lg-6.col-md-12.col-sm-12.tf-contact-col
                       input.bg-light.form-control(type='text', name='name', placeholder='*Tu nombre', required='required')
                     .col-lg-6.col-md-12.col-sm-12.pb-2
-                      input.bg-light.form-control(type='email', name='_replyto', placeholder='*Tu email', required='required')
+                      input.bg-light.form-control(type='email', name='email', placeholder='*Tu email', required='required')
                   .row.pb-2.no-gutters
                     .col-md-12.col-sm-12
                       textarea.bg-light.mb-2.form-control(name='message', placeholder='*Tu mensaje', rows='3', required='required')
