--- a/front-end/views/index.pug
+++ b/front-end/views/index.pug
@@ -17,7 +17,9 @@ block content
                   li.dropdown-item
                     a(href='/eztoken') EZ-Token
                   li.dropdown-item
-                    a(href='/ezico') EZ-ICO
+                    a(href='/ezicoBasic') EZ-ICO (Basic Crowdsale)
+                  li.dropdown-item
+                    a(href='/ezicoMinted') EZ-ICO (Minted Crowdsale)
                   li.dropdown-item
                     a(href='#') EZ-Sales
                   li.dropdown-item
